[gd_scene load_steps=11 format=3 uid="uid://c62bk8cggi6yq"]

[ext_resource type="PackedScene" uid="uid://nodtguob37a2" path="res://lessons/circuit_obstacle.tscn" id="1_4o7yg"]
[ext_resource type="Script" uid="uid://b3ch6il2xt8bb" path="res://lessons/game.gd" id="1_48faf"]
[ext_resource type="Texture2D" uid="uid://5vl7p0xb7nd8" path="res://assets/circuit_background.png" id="1_gkp25"]
[ext_resource type="PackedScene" uid="uid://l5vkm11cgaib" path="res://lessons/simple_obstacle.tscn" id="1_yasw7"]
[ext_resource type="PackedScene" uid="uid://b766pis4r3r6s" path="res://lessons/runner.tscn" id="2_4o7yg"]
[ext_resource type="PackedScene" uid="uid://xl56q8amb611" path="res://assets/finish_line/finish_line.tscn" id="2_sepuf"]
[ext_resource type="PackedScene" uid="uid://budpgxkjtmw1f" path="res://lessons/bouncer.tscn" id="5_8c4bg"]
[ext_resource type="Theme" uid="uid://cdcyvsn1fp8wa" path="res://assets/countdown/count_down_theme.tres" id="7_viysf"]
[ext_resource type="Script" uid="uid://57e8080cpukf" path="res://assets/countdown/count_down.gd" id="8_tpjcj"]
[ext_resource type="PackedScene" uid="uid://dj6ye05dbiqpi" path="res://lessons/pause_screen.tscn" id="9_tpjcj"]

[node name="Game" type="Node2D"]
process_mode = 1
y_sort_enabled = true
script = ExtResource("1_48faf")

[node name="Background" type="Sprite2D" parent="."]
z_index = -2
texture = ExtResource("1_gkp25")
metadata/_edit_lock_ = true

[node name="FinishLine" parent="." instance=ExtResource("2_sepuf")]
unique_name_in_owner = true
z_index = -1
position = Vector2(-1345, 75)
area_width = 256

[node name="Runner" parent="." instance=ExtResource("2_4o7yg")]
unique_name_in_owner = true
position = Vector2(-1278, -286)

[node name="Bouncers" type="Node2D" parent="."]

[node name="Bouncer" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1427, 392)
wall_min_slide_angle = 0.7853982
acceleration = 3000.0
avoidance_strength = 25000.0

[node name="Bouncer2" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1343, 393)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer3" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1262, 391)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer4" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1426, 300)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer5" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1343, 299)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer6" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1262, 296)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer7" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1427, 224)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer8" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1341, 224)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer9" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1257, 224)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer10" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1425, 147)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer11" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1346, 145)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer12" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1261, 142)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer13" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1424, 64)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer14" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1344, 66)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="Bouncer15" parent="Bouncers" instance=ExtResource("5_8c4bg")]
unique_name_in_owner = true
position = Vector2(-1259, 64)
wall_min_slide_angle = 0.7853982
acceleration = 2000.0
avoidance_strength = 25000.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CountDown" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -109.0
offset_right = 162.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_viysf")
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_tpjcj")
metadata/_custom_type_script = "uid://57e8080cpukf"

[node name="PauseScreen" parent="CanvasLayer" instance=ExtResource("9_tpjcj")]
process_mode = 3
menu_opened_amount = 1.0

[node name="Obstables" type="Node" parent="."]

[node name="SimpleObstacle" parent="Obstables" instance=ExtResource("1_yasw7")]
position = Vector2(-168, -988)

[node name="SimpleObstacle2" parent="Obstables" instance=ExtResource("1_yasw7")]
position = Vector2(1408, 29)

[node name="SimpleObstacle3" parent="Obstables" instance=ExtResource("1_yasw7")]
position = Vector2(-3, -278)

[node name="CircuitObstacle" parent="." instance=ExtResource("1_4o7yg")]
metadata/_edit_lock_ = true
